# PyAutoRoute

./: .gitignore  CHANGES.md  CLAUDE.md  LICENSE  README.md  autorouter_plan.md  conftest.py  pyautoroute.sh  pyproject.toml  setup.py
.claude/: settings.json
TestProjects/Test1/: Test1.kicad_pcb  Test1.kicad_pro  Test1.kicad_sch  Test1_placed.kicad_pro  Test1_routed.kicad_pcb
TestProjects/Test2/: Test2.ini  Test2.kicad_pcb  Test2.kicad_pro  Test2.kicad_sch
TestProjects/Test3/: Test3.kicad_pcb  Test3.kicad_pcb-bak  Test3.kicad_pro  Test3.net  Test3.pro
TestProjects/Test3/rescue-backup/: Twilight Photometer-cache-2019-07-30-05-59-25.lib
TestProjects/Test4/: Test4.kicad_pcb  Test4.kicad_pro
TestProjects/Test5/: .kicad_pcb.kicad_pcb  .kicad_pcb.kicad_pcb-bak  Test5.kicad_pcb  Test5.kicad_pcb-bak  Test5.kicad_pro  Test5.pro
docs/: algorithms.md  architecture.md  feature-suggestions.md  gui-plan.md  performance_analysis.md  place-feature-plan.md  placement-improvements-plan.md  tuning.md
docs/api/: index.html  pyautoroute.html  search.js
docs/api/pyautoroute/: _astar_c.html  anneal.html  autoroute.html  fixup.html  geometry.html  grid.html  gui.html  netlist.html  pcb.html  pipeline.html  placement.html  report.html  router.html  rules.html  sexpr.html  tune.html  visualize.html
docs/api/pyautoroute/gui/: app.html  canvas.html  controls.html  events.html  plots.html  tooltip.html  worker.html
kicad_plugin/: __init__.py  dialog.py  install.py  plugin.py  settings.py
plans/: board-comparison-plan.md  decoupling-cap-plan.md  diffpair-plan.md  drill-hole-plan.md  feature-suggestions.md  footprint-interaction-plan.md  ground-plane-plan.md  gui-plan.md  place-feature-plan.md  placement-improvements-plan.md  placement-polish-plan.md
pyautoroute/: __init__.py  _astar_c.pyx  anneal.py  autoroute.py  compare.py  diffpair.py  fixup.py  footprint_assigner.py  geometry.py  grid.py  groundplane.py  kicad_plugin_install.py  mountingholes.py  netlist.py  pcb.py  pipeline.py  placement.py  report.py  router.py  rules.py  sexpr.py  tune.py  visualize.py
pyautoroute/gui/: __init__.py  app.py  canvas.py  controls.py  events.py  plots.py  tooltip.py  worker.py
scripts/: bench_interleave.py  bench_o1_overlap_tree.py  bench_o2_index_pool.py  bench_o3_diffpair_astar.py  profile_anneal.py
tests/: test_anneal.py  test_boards.py  test_cancel.py  test_compare.py  test_config.py  test_congestion.py  test_constraints_report.py  test_diffpair.py  test_endtoend.py  test_footprint_assigner.py  test_geometry.py  test_grid.py  test_groundplane.py  test_gui_worker.py  test_mountingholes.py  test_netlist.py  test_pcb.py  test_pipeline.py  test_placement.py  test_report.py  test_router.py  test_rules.py  test_script.py  test_sexpr.py  test_tune.py  test_version.py  test_visualize.py
tests/perf/: bench_placement.py  bench_router.py  board_factory.py
tutorial/: Makefile  tutorial.tex
tutorial/TutorialProject/: TutorialProject.kicad_pcb  TutorialProject.kicad_pro  TutorialProject.kicad_sch
