[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyautoroute"
version = "0.14.0"
description = "Simulated-annealing autorouter for 2-layer KiCad PCBs"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]
viz = ["matplotlib"]
docs = ["pdoc"]

[project.scripts]
pyautoroute = "pyautoroute.autoroute:main"
pyautoroute-tune = "pyautoroute.tune:main"

[tool.setuptools.packages.find]
include = ["pyautoroute*"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so `pytest` (not just `python -m pytest`)
# can import the pyautoroute package without an editable install.
pythonpath = ["."]
testpaths = ["tests"]
