[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyautoroute"
version = "0.56.6"
description = "Simulated-annealing autorouter for 2-layer KiCad PCBs"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]
gui = ["matplotlib"]
docs = ["pdoc"]
# Optional native A* core: build deps for the Cython extension. After
# `pip install -e ".[fast]"`, run `python setup.py build_ext --inplace`.
fast = ["cython>=3.0", "numpy"]

[project.scripts]
pyautoroute = "pyautoroute.autoroute:main"
pyautoroute-tune = "pyautoroute.tune:main"
pyautoroute-gui = "pyautoroute.gui:main"
pyautoroute-fix = "pyautoroute.fixup:main"
pyautoroute-compare = "pyautoroute.compare:main"
pyautoroute-install-plugin = "pyautoroute.kicad_plugin_install:main"
pyautoroute-assign = "pyautoroute.footprint_assigner:main"

[tool.setuptools.packages.find]
include = ["pyautoroute*", "kicad_plugin*"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so `pytest` (not just `python -m pytest`)
# can import the pyautoroute package without an editable install.
pythonpath = ["."]
testpaths = ["tests"]
# Also collect the perf-harness benchmarks (tests/perf/bench_*.py): each exposes
# a `test_*_within_budget` that asserts the timing budget, so a perf regression
# fails the suite as well as being runnable standalone.
python_files = ["test_*.py", "bench_*.py"]
